tests/cases/fail/numeric-for-5/source.lua
for local = 1, 10 do end